--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       justify-content: center;
       gap: 15px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      flex-wrap: wrap;
     }
     header img {
       height: 100px;
@@ -65,15 +66,16 @@
     .form-wrapper, .quiz-wrapper, .end-wrapper {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       gap: 40px;
       flex-wrap: wrap;
+      text-align: center;
     }
     .form-wrapper img,
     .quiz-wrapper img,
     .end-wrapper img {
       max-width: 300px;
-      flex-shrink: 0;
+      width: 100%;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
@@ -129,6 +131,21 @@
     }
     footer a:hover {
       text-decoration: underline;
+    }
+
+    /* Responsive layout */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      .form-wrapper, .quiz-wrapper, .end-wrapper {
+        flex-direction: column;
+        align-items: center;
+      }
+      header .header-text {
+        text-align: center;
+      }
     }
   </style>
 </head>
