--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Food Safety Quiz</title>
   <style>
     html, body {
-      height: 100vh;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #f9f9f9, #e0f7fa);
-      overflow: hidden;
-    }
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to bottom, #f9f9f9, #e0f7fa);
+  overflow-x: hidden;
+}
     body {
       display: flex;
       flex-direction: column;
