--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
   <title>Food Safety Quiz</title>
   <style>
     html, body {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to bottom, #f9f9f9, #e0f7fa);
-  overflow-x: hidden;
 }
     body {
       display: flex;
       flex-direction: column;
     }
     .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      overflow-y: auto;
-    }
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow-y: auto;
+}
     header {
       background-color: #2e7d32;
       color: white;
@@ -119,6 +116,7 @@
       color: red;
     }
     footer {
+  flex-shrink: 0;
       background-color: #1b5e20;
       color: white;
       text-align: center;
