--- a/index.html
+++ b/index.html
@@ -5,39 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Safety Quiz</title>
   <style>
-    html, body {
+    html {
+  box-sizing: border-box;
+  height: 100%;
+}
+body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to bottom, #f9f9f9, #e0f7fa);
 }
     body {
       display: flex;
       flex-direction: column;
     }
     .content {
-  flex: 1 0 auto;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow-y: auto;
+  padding: 20px 0;
 }
     header {
-      background-color: #2e7d32;
-      color: white;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      flex-wrap: wrap;
-    }
+  background-color: #2e7d32;
+  color: white;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
     header img {
-      height: 100px;
-    }
+  height: 70px;
+  margin-right: 10px;
+}
     header .header-text {
-      text-align: left;
-    }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: left;
+}
     header h1 {
       margin: 0;
       font-size: 2em;
@@ -116,6 +131,9 @@
       color: red;
     }
     footer {
+  position: sticky;
+  bottom: 0;
+  z-index: 1000;
   flex-shrink: 0;
       background-color: #1b5e20;
       color: white;
